Saving the eslint settings trying to get  html work

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -2,7 +2,9 @@
   "extends": ["airbnb", "plugin:prettier/recommended"],
   "plugins": ["prettier", "html"],
   "settings": {
-    "html/report-bad-indent": "error"
+    "html/report-bad-indent": "error",
+    "html/html-extensions": [".html"],
+    "html/indent": "+2"
   },
   "rules": {
     "linebreak-style": "off",
