--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
   "name": "hello",
   "version": "1.0.0",
-  "description": "",
+  "description": "vscode react html combined",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Jim Bockerstette",
   "license": "ISC",
+  "dependencies": {
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
   "devDependencies": {
     "eslint": "^4.17.0",
     "eslint-config-airbnb": "^16.1.0",
